sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:4: error: '<-' expected but ';' found.
for (i < getValueCount(); i++) {
                        ^AlgInsertionSort:4: error: illegal start of simple pattern
for (i < getValueCount(); i++) {
                             ^AlgInsertionSort:13: error: illegal start of simple expression
}
^